[project]
name = "samurai-sudoku-downloader"
version = "0.1.0"
description = "Download Samurai Sudoku puzzles by date range"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "selenium>=4.38.0",
    "python-dateutil>=2.9.0.post0",
    "tkcalendar>=1.6.0",
    "pyinstaller>=6.16.0",
]
